Fixed submission text not wrapping.

--- a/app/assets/stylesheets/views/users/_questions_large.scss
+++ b/app/assets/stylesheets/views/users/_questions_large.scss
@@ -1,4 +1,5 @@
 .question-large {
+  word-wrap: break-word;
   h2 {
     font-size: 24px;
   }
